--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <title>Prime Solo Project</title>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
   </head>
   <body>
     <noscript>
